--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.identaflix.cetis32_app_registro">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.identaflix.lumen_app_registro">
 	
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
@@ -8,8 +8,12 @@
 	<!-- <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" /> -->
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<!-- <activiti-alias android:name="com.identaflix.lumen_app_registro">
+		<uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" tools:node="remove" />
+	</activiti-alias> -->
+    
 
-	<application android:name="${applicationName}" android:label="Cetis 32" android:icon="@mipmap/launch" android:requestLegacyExternalStorage="true">
+	<application android:name="${applicationName}" android:label="Lumen" android:icon="@mipmap/ic_launcher" android:requestLegacyExternalStorage="true">
 		<activity android:name=".MainActivity" android:launchMode="singleTop" android:theme="@style/NormalTheme" android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" android:hardwareAccelerated="true" android:windowSoftInputMode="adjustResize" android:exported="true">
 			
 	       <meta-data android:name="io.flutter.embedding.android.NormalTheme" android:resource="@style/NormalTheme" />
@@ -62,4 +66,5 @@
 		  <data android:mimeType="*/*" />
 		</intent>
 	  </queries>
+	  
 </manifest>
