--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: cetis32_app_registro
+name: lumen_app_registro
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.1+6
+version: 1.0.1+3
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -70,7 +70,7 @@ dependencies:
   flutter_geofence: ^0.4.4
   camera: ^0.10.0
   loading_indicator: ^3.1.0
-  google_mlkit_face_detection: ^0.4.0
+  #google_mlkit_face_detection: ^0.4.0
   barcode_widget: ^1.5.0
 
 
