nueva versión Lumen App

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
 	<!-- <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" /> -->
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 	<!-- <activiti-alias android:name="com.identaflix.lumen_app_registro">
 		<uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" tools:node="remove" />
 	</activiti-alias> -->
