--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,12 @@ dependencies:
   http: ^0.13.3
   http_parser: ^4.0.0
   path_provider: "2.0.2"
-  url_launcher: ^6.1.5
-  ext_storage: any
+  url_launcher: ^6.1.10
+  #ext_storage: any
   signature: ^5.0.0
   image_picker: "0.8.5"
   mime_type: ^0.3.2
-  permission_handler: "8.1.1"
+  permission_handler: "10.2.0"
   lottie: ^1.4.1
   flutter_credit_card: ^0.1.3
   provider: ^6.0.3
@@ -55,12 +55,12 @@ dependencies:
   pdf: ^2.1.0
   pdf_viewer_plugin: ^2.0.1
   syncfusion_flutter_pdfviewer: ^20.2.43-beta
-  share_plus: ^4.0.10+1
+  share_plus: ^4.5.0
   flutter_local_notifications: ^9.7.0
   paginate_firestore: ^1.0.3+1
   downloads_path_provider_28: ^0.1.2
   open_file_safe: ^3.2.3
-  modal_bottom_sheet: ^2.0.0
+  #modal_bottom_sheet: ^2.1.2
   table_calendar: ^3.0.3
   intl: ^0.17.0
   device_info_plus: ^3.2.1
@@ -68,10 +68,13 @@ dependencies:
   animated_check: ^1.0.5
   settings_ui: ^2.0.2
   flutter_geofence: ^0.4.4
-  camera: ^0.10.0
+  camera: ^0.10.4
   loading_indicator: ^3.1.0
-  #google_mlkit_face_detection: ^0.4.0
+  google_mlkit_face_detection: ^0.4.0
   barcode_widget: ^1.5.0
+  flutter_secure_storage: ^8.0.0
+  external_path: ^1.0.3
+  cross_file: ^0.3.3+4
 
 
 dev_dependencies:
@@ -80,6 +83,7 @@ dev_dependencies:
     
 dependency_overrides:
   syncfusion_flutter_core: ^20.2.43
+  firebase_core_platform_interface: 4.5.1
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
