--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   external_path: ^1.0.3
   cross_file: ^0.3.3+4
+  modal_bottom_sheet: ^2.1.2
 
 
 dev_dependencies:
